2015-01-07  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update NEWS and Versions.m4 for 2.4.8 release.

        * Source/autotools/Versions.m4: Bump version numbers.

2014-10-22  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update NEWS and Versions.m4 for 2.4.7 release.

        * Source/autotools/Versions.m4: Bump version numbers.

2014-10-22  Michael Weber  <xmw@gentoo.org>

        [GTK][Stable] webkitgtk-2.4.6: fails to build with --disable-video
        https://bugs.webkit.org/show_bug.cgi?id=137445

        Reviewed by Carlos Garcia Campos.

        * Source/autotools/SetupWebKitFeatures.m4:

2014-07-11  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Enable VIDEO_TRACK by default
        https://bugs.webkit.org/show_bug.cgi?id=134801

        Reviewed by Philippe Normand.

        * Source/cmake/OptionsGTK.cmake:

2014-09-26  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Enable CSS_IMAGE_SET in production builds
        https://bugs.webkit.org/show_bug.cgi?id=137142

        Reviewed by Alejandro G. Castro.

        This is required by the inspector to show some of the icons that
        has a HiDPI variant.

        * Source/cmake/OptionsGTK.cmake:

2014-09-25  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update NEWS and Versions.m4 for 2.4.6 release.

        * Source/autotools/Versions.m4: Bump version numbers.

2014-08-26  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update NEWS and Versions.m4 for 2.4.5 release.

        * Source/autotools/Versions.m4: Bump version numbers.

2014-07-08  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update NEWS and Versions.m4 for 2.4.4 release.

        * Source/autotools/Versions.m4: Bump version numbers.

2014-05-26  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update NEWS and Versions.m4 for 2.4.3 release.

        * Source/autotools/Versions.m4: Bump version numbers.
